Data Science for Business/Workshops/M2 - Network Analysis and NLP/Session 2/AI as a Service
Last login: Thu Oct 14 12:31:58 on ttys000
/Users/hugotorche/.zprofile:6: no such file or directory: /opt/homebrew/bin/brew
/Users/hugotorche/.zprofile:7: no such file or directory: /opt/homebrew/bin/brew
hugotorche@MacBook-Air-de-Hugo ~ % cd Environments
hugotorche@MacBook-Air-de-Hugo Environments % source flask_env/bin/activate
(flask_env) hugotorche@MacBook-Air-de-Hugo Environments % cd AIforWEB/
(flask_env) hugotorche@MacBook-Air-de-Hugo AIforWEB % python app.py
 * Serving Flask app 'app' (lazy loading)
 * Environment: production
   WARNING: This is a development server. Do not use it in a production deployment.
   Use a production WSGI server instead.
 * Debug mode: off
 * Running on http://127.0.0.1:5000/ (Press CTRL+C to quit)
127.0.0.1 - - [14/Oct/2021 12:34:16] "GET / HTTP/1.1" 200 -
127.0.0.1 - - [14/Oct/2021 12:34:16] "GET /favicon.ico HTTP/1.1" 404 -
127.0.0.1 - - [14/Oct/2021 12:38:53] "GET / HTTP/1.1" 200 -
127.0.0.1 - - [14/Oct/2021 12:38:57] "GET /calculate HTTP/1.1" 404 -
127.0.0.1 - - [14/Oct/2021 12:40:03] "GET /calculate HTTP/1.1" 404 -
127.0.0.1 - - [14/Oct/2021 12:40:04] "GET /calculate HTTP/1.1" 404 -
127.0.0.1 - - [14/Oct/2021 12:40:13] "GET /calculate?price=1050 HTTP/1.1" 404 -
127.0.0.1 - - [14/Oct/2021 12:41:10] "GET /calculate?price=1050& HTTP/1.1" 404 -
127.0.0.1 - - [14/Oct/2021 12:41:56] "GET /calculate?price=1050&year=2012 HTTP/1.1" 404 -
127.0.0.1 - - [14/Oct/2021 12:42:09] "GET /calculate?price=105&year=2012 HTTP/1.1" 404 -
127.0.0.1 - - [14/Oct/2021 12:42:12] "GET /calculate?price=105&year=2012 HTTP/1.1" 404 -
127.0.0.1 - - [14/Oct/2021 12:42:29] "GET /calculate?price=105&year=2012 HTTP/1.1" 404 -
^C%                                                                             (flask_env) hugotorche@MacBook-Air-de-Hugo AIforWEB % python app.py
Traceback (most recent call last):
  File "/Users/hugotorche/Environments/AIforWEB/app.py", line 2, in <module>
    from sklearn.ensemble import RandomForestRegressor
ModuleNotFoundError: No module named 'sklearn'
(flask_env) hugotorche@MacBook-Air-de-Hugo AIforWEB % python app.py
Traceback (most recent call last):
  File "/Users/hugotorche/Environments/AIforWEB/app.py", line 3, in <module>
    import joblib
ModuleNotFoundError: No module named 'joblib'
(flask_env) hugotorche@MacBook-Air-de-Hugo AIforWEB % python main.py
Traceback (most recent call last):
  File "/Users/hugotorche/Environments/AIforWEB/main.py", line 2, in <module>
    from sklearn.ensemble import RandomForestRegressor
ModuleNotFoundError: No module named 'sklearn'
(flask_env) hugotorche@MacBook-Air-de-Hugo AIforWEB % pip install joblib
Collecting joblib
  Downloading joblib-1.1.0-py2.py3-none-any.whl (306 kB)
     |████████████████████████████████| 306 kB 4.9 MB/s 
Installing collected packages: joblib
Successfully installed joblib-1.1.0
WARNING: You are using pip version 21.1.3; however, version 21.3 is available.
You should consider upgrading via the '/Users/hugotorche/Environments/flask_env/bin/python -m pip install --upgrade pip' command.
(flask_env) hugotorche@MacBook-Air-de-Hugo AIforWEB % pip install sklearn
Collecting sklearn
  Downloading sklearn-0.0.tar.gz (1.1 kB)
Collecting scikit-learn
  Downloading scikit_learn-1.0-cp39-cp39-macosx_10_13_x86_64.whl (8.0 MB)
     |████████████████████████████████| 8.0 MB 4.1 MB/s 
Collecting threadpoolctl>=2.0.0
  Downloading threadpoolctl-3.0.0-py3-none-any.whl (14 kB)
Requirement already satisfied: joblib>=0.11 in /Users/hugotorche/Environments/flask_env/lib/python3.9/site-packages (from scikit-learn->sklearn) (1.1.0)
Collecting scipy>=1.1.0
  Downloading scipy-1.7.1-cp39-cp39-macosx_10_9_x86_64.whl (32.8 MB)
     |████████████████████████████████| 32.8 MB 31.5 MB/s 
Collecting numpy>=1.14.6
  Using cached numpy-1.21.2-cp39-cp39-macosx_10_9_x86_64.whl (17.0 MB)
Building wheels for collected packages: sklearn
  Building wheel for sklearn (setup.py) ... done
  Created wheel for sklearn: filename=sklearn-0.0-py2.py3-none-any.whl size=1309 sha256=f4b29c6850e0299f65818bb4a404a4d2dc1a60c987e82b9cb6eb2800d8af4758
  Stored in directory: /Users/hugotorche/Library/Caches/pip/wheels/e4/7b/98/b6466d71b8d738a0c547008b9eb39bf8676d1ff6ca4b22af1c
Successfully built sklearn
Installing collected packages: numpy, threadpoolctl, scipy, scikit-learn, sklearn
Successfully installed numpy-1.21.2 scikit-learn-1.0 scipy-1.7.1 sklearn-0.0 threadpoolctl-3.0.0
WARNING: You are using pip version 21.1.3; however, version 21.3 is available.
You should consider upgrading via the '/Users/hugotorche/Environments/flask_env/bin/python -m pip install --upgrade pip' command.
(flask_env) hugotorche@MacBook-Air-de-Hugo AIforWEB % python app.py
Traceback (most recent call last):
  File "/Users/hugotorche/Environments/AIforWEB/app.py", line 6, in <module>
    rf_model = joblib.load('rf_model.joblib')
  File "/Users/hugotorche/Environments/flask_env/lib/python3.9/site-packages/joblib/numpy_pickle.py", line 587, in load
    obj = _unpickle(fobj, filename, mmap_mode)
  File "/Users/hugotorche/Environments/flask_env/lib/python3.9/site-packages/joblib/numpy_pickle.py", line 506, in _unpickle
    obj = unpickler.load()
  File "/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/pickle.py", line 1212, in load
    dispatch[key[0]](self)
KeyError: 35
(flask_env) hugotorche@MacBook-Air-de-Hugo AIforWEB % python app.py
Traceback (most recent call last):
  File "/Users/hugotorche/Environments/AIforWEB/app.py", line 6, in <module>
    rf_model = joblib.load('rf_model.joblib')
  File "/Users/hugotorche/Environments/flask_env/lib/python3.9/site-packages/joblib/numpy_pickle.py", line 587, in load
    obj = _unpickle(fobj, filename, mmap_mode)
  File "/Users/hugotorche/Environments/flask_env/lib/python3.9/site-packages/joblib/numpy_pickle.py", line 506, in _unpickle
    obj = unpickler.load()
  File "/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/pickle.py", line 1212, in load
    dispatch[key[0]](self)
KeyError: 35
(flask_env) hugotorche@MacBook-Air-de-Hugo AIforWEB % python app.py
  File "/Users/hugotorche/Environments/AIforWEB/app.py", line 21
    result =
            ^
SyntaxError: invalid syntax
(flask_env) hugotorche@MacBook-Air-de-Hugo AIforWEB % python app.py
Traceback (most recent call last):
  File "/Users/hugotorche/Environments/AIforWEB/app.py", line 6, in <module>
    rf_model = joblib.load('rf_model.joblib')
  File "/Users/hugotorche/Environments/flask_env/lib/python3.9/site-packages/joblib/numpy_pickle.py", line 587, in load
    obj = _unpickle(fobj, filename, mmap_mode)
  File "/Users/hugotorche/Environments/flask_env/lib/python3.9/site-packages/joblib/numpy_pickle.py", line 506, in _unpickle
    obj = unpickler.load()
  File "/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/pickle.py", line 1212, in load
    dispatch[key[0]](self)
KeyError: 35
(flask_env) hugotorche@MacBook-Air-de-Hugo AIforWEB % python app.py
Traceback (most recent call last):
  File "/Users/hugotorche/Environments/AIforWEB/app.py", line 6, in <module>
    rf_model = joblib.load('rf_model.joblib')
  File "/Users/hugotorche/Environments/flask_env/lib/python3.9/site-packages/joblib/numpy_pickle.py", line 587, in load
    obj = _unpickle(fobj, filename, mmap_mode)
  File "/Users/hugotorche/Environments/flask_env/lib/python3.9/site-packages/joblib/numpy_pickle.py", line 506, in _unpickle
    obj = unpickler.load()
  File "/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/pickle.py", line 1212, in load
    dispatch[key[0]](self)
KeyError: 35
(flask_env) hugotorche@MacBook-Air-de-Hugo AIforWEB % python app.py
Traceback (most recent call last):
  File "/Users/hugotorche/Environments/AIforWEB/app.py", line 6, in <module>
    rf_model = joblib.load('rf_model.joblib')
NameError: name 'joblib' is not defined
(flask_env) hugotorche@MacBook-Air-de-Hugo AIforWEB % python app.py
Traceback (most recent call last):
  File "/Users/hugotorche/Environments/AIforWEB/app.py", line 3, in <module>
    from joblib import joblib
ImportError: cannot import name 'joblib' from 'joblib' (/Users/hugotorche/Environments/flask_env/lib/python3.9/site-packages/joblib/__init__.py)
(flask_env) hugotorche@MacBook-Air-de-Hugo AIforWEB % python app.py
Traceback (most recent call last):
  File "/Users/hugotorche/Environments/AIforWEB/app.py", line 6, in <module>
    rf_model = joblib.load('rf_model.joblib')
  File "/Users/hugotorche/Environments/flask_env/lib/python3.9/site-packages/joblib/numpy_pickle.py", line 587, in load
    obj = _unpickle(fobj, filename, mmap_mode)
  File "/Users/hugotorche/Environments/flask_env/lib/python3.9/site-packages/joblib/numpy_pickle.py", line 506, in _unpickle
    obj = unpickler.load()
  File "/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/pickle.py", line 1212, in load
    dispatch[key[0]](self)
KeyError: 35
(flask_env) hugotorche@MacBook-Air-de-Hugo AIforWEB % python app.py
Traceback (most recent call last):
  File "/Users/hugotorche/Environments/AIforWEB/app.py", line 3, in <module>
    from sklearn.externals import joblib
ImportError: cannot import name 'joblib' from 'sklearn.externals' (/Users/hugotorche/Environments/flask_env/lib/python3.9/site-packages/sklearn/externals/__init__.py)
(flask_env) hugotorche@MacBook-Air-de-Hugo AIforWEB % python app.py
Traceback (most recent call last):
  File "/Users/hugotorche/Environments/AIforWEB/app.py", line 6, in <module>
    rf_model = joblib.load('rf_model.joblib')
  File "/Users/hugotorche/Environments/flask_env/lib/python3.9/site-packages/joblib/numpy_pickle.py", line 587, in load
    obj = _unpickle(fobj, filename, mmap_mode)
  File "/Users/hugotorche/Environments/flask_env/lib/python3.9/site-packages/joblib/numpy_pickle.py", line 506, in _unpickle
    obj = unpickler.load()
  File "/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/pickle.py", line 1212, in load
    dispatch[key[0]](self)
KeyError: 35
(flask_env) hugotorche@MacBook-Air-de-Hugo AIforWEB % 
